--- a/app/src/main/res/layout/activity_myform.xml
+++ b/app/src/main/res/layout/activity_myform.xml
@@ -12,17 +12,17 @@
         android:onClick="getScore">
 
         <EditText
+            android:id="@+id/myEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/MyEditText"
             android:layout_weight="1"
             android:hint="your name.." />
 
         <Button
+            android:id="@+id/myButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
-            android:id="@+id/Mybutton"
             android:nestedScrollingEnabled="true"
     />
     </LinearLayout>
